update and improve vignette

--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -19,24 +19,17 @@ library(rmarkdown)
 
 # Introduction
 
-This package implements methods to provide perturbation for statistical tables. The method is based on the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). Furthermore it is possible to perturb tables using a different approach developed by DESTATIS. The two approaches differ in the way record keys have to be specified, the format of the perturbation tables and the way, the actual lookup is done.
+This package implements methods to provide perturbation for statistical tables. The method is based on the paper *Methodology for the Automatic Confidentialisation of Statistical Outputs from Remote Servers at the Australian Bureau of Statistics* (Thompson, Broadfoot, Elazar). Furthermore it is possible to perturb tables using a different approach developed by the Federal Statistical Office of Germany (Destatis). The two approaches differ in the way record keys have to be specified, the format of the perturbation tables and the way, the actual lookup is done.
 
 ## Main Features
 
-TBW
+We now briefly mention the main features of the **cellKey** package before we actually show how to created perturbed tables in the following sections.
 
-- using sha1-sums on input objects to set seed for record-key generation if not possible
-- different formats/algorithms for perturbation tables (`"abs"` and `"destatis"`) possible
-- record-keys can be pre-generated for both variants
-- computation of weighted and unweighted count tables
-- computation of weighted and unweighted magnitude tables
-- multidimensional tables with complex hierarchies in all dimensions are possible
+In the **cellKey** package it is possible to make use of two different ways on how to pertub multidimensional count tables - methods `abs` and `destatis`. For both of them methods are provided to generate suitable record keys using function `ck_generate_rkeys()`. For the perturbation of magnitude tables, for now only the method developed by the ABS is supported. Using sha1-checksums on the input datasets, we can make sure that the same record keys are generated whenever the same input data set is used for which record keys should be generated. However, it is also possible of course to use already pre-generated record keys available as variable in the microdata set.
 
-## Todo
-- ~~allow hierarchical input in  `perturbTable()`~~
-- ~~check parametrisation of perturbation tables~~
-- ~~usage of destatis input format for perturbation tables~~
-- performance optimizations
+The package allows to make use of sampling weights. Thus, both weighted and unweighted count and magnitude tables can be perturbed. The hierarchical structure of the variables spanning the table can be arbitrarily complex. To generate these hierarchies, the **cellKey** packages allows not only to specify dimensions the same way as in package [**sdcTable**](https://cran.r-project.org/package=sdcTable) but also comes with a new and improved way using function `ck_create_node()`, `ck_add_nodes()` and `ck_delete_nodes()`. Finally, auxiliary methods are provided that allow to extract valueable information from objects created by the main function of this package `perturbTable()`. For example `mod_counts()` returns a data object showing for each cell the perturbation value and where it was found in the lookup table.
+
+What is left is of course identifying bugs and issues and also to optimize performance of the package as well as to include some real world examples, eg. census tables.
 
 ## An Example
 
@@ -49,7 +42,7 @@ packageVersion("cellKey")
 ### Loading testdata
 The testdata set we are using in this example contains information on person-level along with sampling weights as well as some categorical and continously scaled variables.
 ```{r}
-dat <- ck_create_testdata()
+dat <- ck_create_testdata()[,c("sex","age","savings","income","sampling_weight")]
 head(dat)
 ```
 
@@ -90,19 +83,42 @@ We needed to specify parameter `def_rkey`. In this argument, users may either sp
 To ensure, that the same record keys are computed each and every time for the same data set, a seed based on the sha1-hash of the input dataset is computed and used before drawing the record keys.
 
 ### Specifying dimensions
-The next step is to define hierarchies for each of the classifying variables. The way the hierarchies of these variables (including sub-totals) are specified is the same as in Package **sdcTable**. We give an example for the categorical variables `age` and `sex` below:
+The next step is to define hierarchies for each of the classifying variables. There are two ways how the hierarchical structure of these variables (including sub-totals) can be specified. The first way is the same as dimensions have to be specified in package **sdcTable**. We give an example for the categorical variables `age` and `sex` below:
 
 ```{r}
-dim.sex <- data.table(levels=c("@","@@","@@"), codes=c("Total", 1, 2))
-dim.age <- data.table(levels=c("@",rep("@@", 6)), codes=c("Total", 1:6))
-dimList <- list(sex=dim.sex, age=dim.age)
+dim.sex <- data.table(levels=c("@","@@","@@"), codes=c("Total", "male", "female"))
+print(dim.sex)
+
+
+dim.age <- data.table(levels=c("@",rep("@@", 6)), codes=c("Total", paste0("age_group",1:6)))
+print(dim.age)
 ```
 
 Each hierarchy is represented with a `data.frame` or `data.table` holding two variables. The first variables (`levels`) shows the level of a given characteristic that is shown in the second column (`codes`). The levels can be interpreted as `@` being the upmost level (overall total) while all codes with value `@@` contribute to this total. In the (very simple) case of variable `sex` we have one overall total in level 1 (called `Total`) that is computed from two characteristics (`1` and `2`) in level 2. This approach allows to specify quite complex hierarchies in many levels.
 
-All hierarchy specifications must then be combined into a named list where the names of the list elements contain variable names of the input data set and the elements the data objects that hold the hierarchy specification. This is why the list elements of `dimList` have to be named `sex` and `age`.
+An alternative way (available from versions `>=0.9.0`) is to use functions `ck_create_node()`, `ck_add_nodes()` and `ck_delete_nodes()` to build the hierarchies. These functions make use of functionality available in the [**data.tree**](https://cran.r-project.org/package=data.tree) package and return a tree-like structure. **cellKey** will internally convert input provided in such format automatically into the format used in [**sdcTable**](https://cran.r-project.org/package=sdcTable). We now show the alternative way on how to specify the hierarchies for variables `sex`:
 
 ```{r}
+dim.sex2 <- ck_create_node(total_lab="Total")
+dim.sex2 <- ck_add_nodes(dim.sex2, reference_node="Total", node_labs=c("male","female"))
+print(dim.sex2)
+```
+
+For variable `age` the process is quite similar:
+```{r}
+dim.age2 <- ck_create_node(total_lab="Total")
+dim.age2 <- ck_add_nodes(dim.age2, reference_node="Total", node_labs=paste0("age_group",1:6))
+print(dim.age2)
+```
+
+The idea is to create a tree object using `ck_create_node()` and then add (using `ck_add_nodes()`) or delete (with `ck_delete_nodes()`) elements from this hierarchical structure. For more examples have a look at `?ck_manage_hierarchies`.
+
+All hierarchy specifications must then be combined into a named list where the names of the list elements contain variable names of the input data set and the elements the data objects that hold the hierarchy specification. This is why the list elements of `dimList` have to be named `sex` and `age`. Please note that it is perfectly possible to "mix" definitions of the inputs.
+
+```{r}
+# dim.sex was created the "sdcTable-way"
+# dim.age2 was created with the more dynamic way 
+dimList <- list(sex=dim.sex, age=dim.age2)
 print(dimList)
 ```
 
@@ -167,4 +183,4 @@ mod_numvars(tab2)
 ```
 
 ## Summary
-In case you have any suggestions or improvements, please feel free to file an issue at [**our issue tracker**](https://github.com/sdcTools/cellKey/issues) or contribute to the package by filing a pull request.
+In case you have any suggestions or improvements, please feel free to file an issue at [**our issue tracker**](https://github.com/sdcTools/cellKey/issues) or contribute to the package by filing a [**pull request**](https://github.com/sdcTools/cellKey/pulls) against the master branch.
